# hashenv

./: .gitignore  README.md  optimization_notes.txt  pyproject.toml  requirements.txt
__tests__/: test_backend_connection_health_test.py
cli/: cli.py
src/core/: config.py
src/hashenv/: cli.py
src/helpers/: env_recieve.py  get_env_from_backend.py  get_repo_details_from_git.py  get_repo_list.py  ping_backend_server.py  push_env_to_backend.py  repo_searcher.py
src/helpers/environment_processors/: get_env_variables_from_local.py  ping_db_for_repository_check.py
src/helpers/local_env_parsing_helpers/: check_local_env_for_content.py
src/services/: env_parsing_service.py  local_environment_parsing_and_write_service.py  repository_processing_and_query_service.py
