[project]
name = "hashenv"
version = "0.1.0"
description = "A simple CLI tool to manage environment tokens"
authors = [
    { name = "Chestor", email = "your.email@example.com" }
]
dependencies = [
    "typer>=0.12.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
hashenv = "hashenv.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
